# Goldfish

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libGoldfish.cpp  libGoldfish.h  main.cpp
Goldfish/: libGoldfishAnswer.cpp  libGoldfishBoolean.cpp  libGoldfishLog.cpp  libGoldfishLogs.cpp  libGoldfishString.cpp  libGoldfishTestSuit.cpp  libGoldfishUtil.cpp
Goldfish/include/: libGoldfish.h
Goldfish/include/Goldfish/: libGoldfish.h
include/: libGoldfish.h
